# welfare-backend

./: .env  Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-09-11-150906_create_balance_sheet/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
